Added Education part

--- a/CV_Website/index.html
+++ b/CV_Website/index.html
@@ -135,9 +135,36 @@
                     
                     <!--========== EDUCATION ==========-->
                     <section class="education section" id="education">
-                        
-                    </section>
+                        <h2 class="section-title">Education</h2>
 
+                        <div class="education__container bd-grid">
+                            <div class="education__content">
+                                <div class="education__time">
+                                    <span class="education__rounder"></span>
+                                    <span class="education__line"></span>
+                                </div>
+
+                                <div class="education__data bd-grid">
+                                    <h3 class="education__title">BACHELOR OF CYBER SECURITY</h3>
+                                    <span class="education__studies">Technical University of Moldova</span>
+                                    <span class="education__year">2020 - present</span>
+                                </div>
+                            </div>
+
+                            <div class="education__content">
+                                <div class="education__time">
+                                    <span class="education__rounder"></span>
+                               <!-- <span class="education__line"></span> -->
+                                </div>
+
+                                <div class="education__data bd-grid">
+                                    <h3 class="education__title">FRONTEND DEVELOPMENT</h3>
+                                    <span class="education__studies">Tekwill Academy</span>
+                                    <span class="education__year">November 2022 - January 2023</span>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
 
                     <!--========== SKILLS  ==========-->
                     <section class="skills section" id="skills">
