--- a/CV_Website/index.html
+++ b/CV_Website/index.html
@@ -168,7 +168,29 @@
 
                     <!--========== SKILLS  ==========-->
                     <section class="skills section" id="skills">
-                        
+                        <h2 class="section-title">Skills</h2>
+
+                        <div class="skills__content bd-grid">
+                            <ul class="skills__data">
+                                <li class="skills__name">
+                                    <span class="skills__circle"></span>HTML
+                                </li>
+
+                                <li class="skills__name">
+                                    <span class="skills__circle"></span>CSS
+                                </li>
+                            </ul>
+
+                            <ul class="skills__data">
+                                <li class="skills__name">
+                                    <span class="skills__circle"></span>Javascript
+                                </li>
+
+                                <li class="skills__name">
+                                    <span class="skills__circle"></span>Python
+                                </li>
+                            </ul>
+                        </div>
                     </section>
 
                 </div>
