Added Light/Dark mode

--- a/CV_Website/index.html
+++ b/CV_Website/index.html
@@ -45,17 +45,22 @@
                         </li>
 
                         <li class="nav__item">
-                            <a href="#languages" class="nav__link">
-                                <i class="bx bxl-bootstrap nav__icon"></i>Languages
+                            <a href="#experience" class="nav__link">
+                                <i class="bx bx-briefcase-alt nav__icon"></i>Experience
                             </a>
                         </li>
 
                         <li class="nav__item">
-                            <a href="#interests" class="nav__link">
-                                <i class="bx bx-run nav__icon"></i>Interests
+                            <a href="#certificates" class="nav__link">
+                                <i class="bx bx-award nav__icon"></i>Certificates
                             </a>
                         </li>
 
+                        <li class="nav__item">
+                            <a href="#references" class="nav__link">
+                                <i class="bx bx-link-external nav__icon"></i>References
+                            </a>
+                        </li>
                     </ul>
                 </div>
 
@@ -97,7 +102,9 @@
                                     <i class="bx bx-phone home-icon"></i> +37369407362
                                 </span>
                             </div>
-                        </div>                        
+                        </div>
+                        <!-- Theme change button -->
+                        <i class="bx bx-moon change-theme" title="Theme" id="theme-button"></i>                         
                     </section>          
                     
                     <!--========== SOCIAL ==========-->
@@ -191,6 +198,106 @@
                 </div>
 
                 <div class="resume__right">
+                    <!--========== EXPERIENCE ==========-->
+                    <section class="experience section" id="experience">
+                        <h2 class="section-title">Experience</h2>
+
+                        <div class="experience__container bd-grid">
+                            <div class="experience__content">
+                                <div class="experience__time">
+                                    <span class="experience__rounder"></span>
+                                    <span class="experience__line"></span>
+                                </div>
+
+                                <div class="experience__data bd-grid">
+                                    <h3 class="experience__title">WEB DESIGNER</h3>
+                                    <span class="experience__company">From 2016 to 2018 | Tech Soft</span>
+                                    <p class="experience__description">Work in this company dedicating the best 
+                                        responsibility in the area that corresponds, delivering the best results 
+                                        for the company and improving productivity.</p>
+                                </div>
+                            </div>
+
+                            <div class="experience__content">
+                                <div class="experience__time">
+                                    <span class="experience__rounder"></span>
+                                    <span class="experience__line"></span>
+                                </div>
+
+                                <div class="experience__data bd-grid">
+                                    <h3 class="experience__title">UI / UX DESIGN AREA</h3>
+                                    <span class="experience__company">From 2018 to 2020 | Adobe Inc</span>
+                                    <p class="experience__description">Work in this company dedicating the best 
+                                        responsibility in the area that corresponds, delivering the best results 
+                                        for the company and improving productivity.</p>
+                                </div>
+                            </div>
+
+                            <div class="experience__content">
+                                <div class="experience__time">
+                                    <span class="experience__rounder"></span>
+                                    <!-- <span class="experience__line"></span> -->
+                                </div>
+
+                                <div class="experience__data bd-grid">
+                                    <h3 class="experience__title">MOBILE APPLICATION DEVELOPER</h3>
+                                    <span class="experience__company">From 2020 to 2022 | App Tech</span>
+                                    <p class="experience__description">Work in this company dedicating the best 
+                                        responsibility in the area that corresponds, delivering the best results 
+                                        for the company and improving productivity.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+
+                    <!--========== CERTIFICATES ==========-->
+                    <section class="certificate section" id="certificates">
+                        <h2 class="section-title">Certificates</h2>
+
+                        <div class="certificate__content">
+                            <h3 class="certificate__title">Certified for compliance in the work area (2017)</h3>
+                            <p class="certificate__description">For meeting the expectations of leading the team 
+                                to work the specified tasks in the labor field.</p>
+                        </div>
+
+                        <div class="certificate__content">
+                            <h3 class="certificate__title">Certificate of attendance on computer technology (2018)</h3>
+                            <p class="certificate__description">For meeting the expectations of leading the team 
+                                to work the specified tasks in the labor field.</p>
+                        </div>
+
+                        <div class="certificate__content">
+                            <h3 class="certificate__title">Achievement medal for productivity excellence during the year (2019)</h3>
+                            <p class="certificate__description">For meeting the expectations of leading the team 
+                                to work the specified tasks in the labor field.</p>
+                        </div>
+                    </section>
+
+                    <!--========== REFERENCES ==========-->
+                    <section class="references section" id="references">
+                        <h2 class="section-title">References</h2>
+
+                        <div class="references__container bd-grid">
+                            <div class="references__content bd-grid">
+                                <span class="references__subtitle">Sr. Director</span>
+                                <h3 class="references__title">Mr. Clay Doe</h3>
+                                <ul class="references__contact">
+                                    <li>Phone: 999-888-777</li>
+                                    <li>Email: user@email.com</li>
+                                </ul>
+                            </div>
+
+                            <div class="references__content bd-grid">
+                                <span class="references__subtitle">Mag. Developer</span>
+                                <h3 class="references__title">Mr. Robbinson Bass</h3>
+                                <ul class="references__contact">
+                                    <li>Phone: 999-888-777</li>
+                                    <li>Email: user@email.com</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </section>
+
                     <!--========== LANGUAGES ==========-->
                     <section class="languages section" id="languages">
                         <h2 class="section-title">Languages</h2>
